week one  update

--- a/index.html
+++ b/index.html
@@ -4,11 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 231 - Web Frontend Development I</title>
+    
+    <!--JavaScript files-->
+    <script src="navigation.js" defer></script>
+    <script src="date.js" defer></script>
+    <script src="course.js" defer></script>
 </head>
 
 <body>
+  <header>
+    <h1>Welcome to Cape Champers</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#Home">Home</a></li>
+      <li><a href="#Chamber">Chamber</a></li>
+      <li><a href="#Final">Final</a></li>
+      <li><a href="#GitHub">GitHub Profile</a></li>
+      <li><a href="#LinkedIn">LinkedIn</a></li>
+
+    </ul>
+  </nav>
+  <main>
+    <section id="course-content">
+      <h2>Available Courses</h2>
+      <!-- Course content populated by course.js -->
+    </section>
+    <section>
+      <h2></h2>
+    </section>
+    <section>
+      <h2></h2>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; <span id="currentyear"></span>
+      Edwin Ewudzie
+    </p>
+    <p></p>
+  </footer>
     <h1>WDD231 - Edwin</h1>
+
+    <!--hshasakshhash-->
 </body>
 
 </html>
