--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="currentyear"></span>
-      Edwin Ewudzie
-    </p>
-    <p></p>
+     <p>© 🐧Edwin Ewudzie 🐧 Accra, Ghana
+            <span id="currentyear"></span>
+      </p>
+      <p>🐧Edwin Ewudzie 🐧 Accra, Ghana
+            <span id="lastModified"></span>
+      </p>
   </footer>
     <h1>WDD231 - Edwin</h1>
 
