--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
   <main>
     <section id="course-content">
-      <h2>Available Courses</h2>
+      <h2>Cape Chambers</h2>
       <!-- Course content populated by course.js -->
     </section>
     <section>
