--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="navigation.js" defer></script>
     <script src="date.js" defer></script>
     <script src="course.js" defer></script>
-    
+
 </head>
 
 <body>
@@ -39,6 +39,18 @@
       <h2></h2>
     </section>
   </main>
+
+  <div class="filters">
+  <button id="allBtn">All Courses</button>
+  <button id="wddBtn">WDD Courses</button>
+  <button id="cseBtn">CSE Courses</button>
+</div>
+
+<p id="credit-total"></p>
+
+<section id="certificate-section" class="course-list"></section>
+
+
 
   <footer>
      <p>© 🐧Edwin Ewudzie 🐧 Accra, Ghana
